--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Google 1998 Recreated</title>
+  <title>Google!</title>
   <style>
     body {
       background-color: white;
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="logo">
-    <img src="https://www.google.com/logos/1998/googlebeta.jpg" alt="Google 1998 Logo">
+    <img src="images/googlebeta.jpg" alt="Google 1998 Logo">
   </div>
   <div class="search-box">
     <form action="https://www.google.com/search" method="GET" target="_blank">
